--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -457,7 +457,7 @@
 
               </div>
               <div>
-                <div style="background-image: url('https://github.com/isharaU/fleet/blob/acab2fbce69bca4e8285b7b5e7113f7dfd354686/src/main/resources/static/img/bg-1.jpg'); background-size: 100% 100%; height: 400px;"></div>
+                <div style="background-image: url('static/img/pxfuel.jpg'); background-size: 100% 100%; height: 400px;"></div>
               </div>
 
             </div>
